# transaction-processor

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  setup.sh
app/: .env.example  Cargo.toml
app/migrations/2024-01-01-000000_create_accounts/: down.sql  up.sql
app/migrations/2024-01-01-000001_create_transactions/: down.sql  up.sql
app/migrations/2025-10-24-043551-0000_create_event_sourcing_tables/: down.sql  up.sql
app/src/: lib.rs  main.rs  models.rs  schema.rs
app/src/api/: mod.rs  routes.rs  server.rs  state.rs
app/src/application/: mediator.rs  mod.rs
app/src/application/commands/: create_account_command.rs  create_balance_snapshot_command.rs  create_ledger_event_command.rs  create_transaction_command.rs  mod.rs
app/src/application/handlers/: create_account_handler.rs  create_balance_snapshot_handler.rs  create_ledger_event_handler.rs  create_transaction_handler.rs  get_account_balance_handler.rs  get_account_handler.rs  list_accounts_handler.rs  list_ledger_events_handler.rs  list_transactions_handler.rs.old  mod.rs
app/src/application/queries/: get_account_balance_query.rs  get_account_query.rs  list_accounts_query.rs  list_ledger_events_query.rs  list_transactions_query.rs  mod.rs
app/src/domain/: errors.rs  mod.rs
app/src/domain/entities/: account.rs  account_balance.rs  ledger_event.rs  mod.rs  transaction.rs
app/src/domain/repositories/: account_balance_repository.rs  account_repository.rs  ledger_event_repository.rs  (+2 more)
app/src/infrastructure/: mod.rs
(+14 files in other folders)
